--- a/opsettings/res/values/strings.xml
+++ b/opsettings/res/values/strings.xml
@@ -56,14 +56,14 @@
     <string name="oneplus_mode_title">OnePlus</string>
 	<string name="hbm_mode_title">High Brightness mode</string>
 
-    <!-- Spectrum Profiles -->
+    <!-- Spectrum Profiles 
     <string name="spectrum_category_title">Spectrum</string>
     <string name="spectrum_title">Kernel Power Profile</string>
     <string name="spectrum_summary">%1$s</string>
     <string name="spectrum_profile_battery">Battery</string>
     <string name="spectrum_profile_balanced">Balanced</string>
     <string name="spectrum_profile_performance">Performance</string>
-    <string name="spectrum_profile_gaming">Gaming</string>
+    <string name="spectrum_profile_gaming">Gaming</string>-->
 
     <!-- Notification slider -->
     <string name="notification_slider_usage_title">Use slider for</string>
